Token Change, Added BMSTC to 'about us' section. Test change.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="mainheadlinewrapper">
               <div class="mainheadline textleft startAnimation animated fadeInUp" data-animate="fadeInUp" style="opacity: 1;">
                 <h2>About Us</h2>
-                <p> We are four guys who will be rowing across the Atlantic in the winter of 2018, to raise money for Multiple Sclerosis care.</p>
+                <p> We are four guys who will be rowing across the Atlantic in the winter of 2018, to raise money for the Berkshire Multiple Sclerosis Therapy Centre.</p>
                <p> The North Atlantic Ocean is one of the most <b>challenging</b>, unpredictable and dangerous bodies of water in the world. Atlantic Disovery is going to attempt the gruelling row during December 2018 coinciding with the end of the hurricane season to get the most benefit from the easterly trade winds and Atlantic currents.</p>
               </div>
             </div>
